@@ -2,7 +2,7 @@
 # CustomerMessage.dtl - provides HTML form for customer message
 # Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CustomerMessage.dtl,v 1.5 2003-02-08 15:40:44 martin Exp $
+# $Id: CustomerMessage.dtl,v 1.6 2003-02-17 18:31:17 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -26,15 +26,20 @@
 <input type="hidden" name="QueueID" value="$Data{"QueueID"}">
 <input type="hidden" name="TicketID" value="$Data{"TicketID"}">
 <input type="hidden" name="NextScreen" value="$Data{"NextScreen"}">
-  <table border="0">
+  <table border="0" width="100%">
   <tr>
-    <td>$Text{"Subject"}:</td><td><input type="text" name="Subject" value="" size="60"></td>
+    <td width="15%">$Text{"Subject"}:</td>
+    <td width="85%"><input type="text" name="Subject" value="" size="60"></td>
   </tr>
   <tr>
     <td>$Text{"Text"}:</td><td>
 <textarea name="Note" rows="15" cols="60" wrap="$Env{"BrowserWrap"}">
 </textarea>
     </td>
+  </tr>
+  <tr>
+    <td>$Text{"Next state"}:</td>
+    <td>$Data{"NextStatesStrg"}</td>
   </tr>
   <tr>
     <td>$Text{"Attachment"}:</td><td><input name="file_upload" type="file" size="40" class="fixed">&nbsp;<a name="attachment"></td>
